# six7

./: .flutter-plugins-dependencies  README.md  android.sh  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist  KoriumBridge.swift
lib/: main.dart
lib/src/: app.dart
lib/src/core/auth/: lock_screen.dart  lock_service.dart
lib/src/core/location/: location_provider.dart
lib/src/core/notifications/: notification_listener.dart  notification_service.dart
lib/src/core/router/: app_router.dart
lib/src/core/storage/: identity_storage.dart  storage_service.dart
lib/src/core/storage/models/: chat_message_hive.dart  chat_preview_hive.dart  group_hive.dart  outbox_message_hive.dart  vibe_hive.dart
lib/src/core/utils/: geohash.dart
lib/src/features/chat/presentation/screens/: chat_screen.dart
lib/src/features/chat/presentation/widgets/: chat_input.dart  message_bubble.dart
lib/src/features/contacts/domain/providers/: contacts_provider.dart  profile_exchange_provider.dart
lib/src/features/contacts/presentation/screens/: contacts_screen.dart
lib/src/features/groups/domain/providers/: group_message_provider.dart  (+1 more)
lib/src/korium/: korium_bridge.dart
lib/src/rust/: api.dart  error.dart  frb_generated.dart  frb_generated.dart.placeholder  message.dart  streams.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: actor.rs  api.rs  bridge.rs  error.rs  frb_generated.rs  lib.rs  message.rs  node.rs  streams.rs
rust/tests/: korium_network_integration.rs
(+32 files in other folders)
