[package]
name = "six7_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Korium P2P networking
korium = "0.3.10"

# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }

# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
hex = "0.4"
rand = "0.8"
# Must match korium's ed25519-dalek version for PublicKey conversion
ed25519-dalek = "=3.0.0-pre.3"

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
flutter_rust_bridge_codegen = "=2.11.1"

# Suppress frb_expand cfg warnings from flutter_rust_bridge macros
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
